# backend/src/main/java/com/hallap/reserveerimissysteem/dto/FeatureType.java
@@ -1,0 +1,7 @@
+package com.hallap.reserveerimissysteem.dto;
+
+public enum FeatureType {
+    PRIVATE_ROOM,
+    PLAY_AREA,
+    WINDOW_BAND
+}
