# backend/src/main/java/com/hallap/reserveerimissysteem/dto/PlanCode.java
@@ -1,0 +1,6 @@
+package com.hallap.reserveerimissysteem.dto;
+
+public enum PlanCode {
+    INDOOR,
+    TERRACE
+}
